// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.sequencer.admin.v30;

import "com/digitalasset/canton/protocol/v30/sequencing.proto";

// Service allowing a Domain node to initialize the sequencer instance.
// Should typically only be exposed to the domain node and not all clients
service SequencerVersionService {
  // Perform a handshake with the initialization service to ensure that the client and server are using compatible versions
  rpc Handshake(SequencerVersion.HandshakeRequest) returns (SequencerVersion.HandshakeResponse);
}

message SequencerVersion {
  message HandshakeRequest {
    com.digitalasset.canton.protocol.v30.Handshake.Request handshake_request = 1;
  }

  message HandshakeResponse {
    com.digitalasset.canton.protocol.v30.Handshake.Response handshake_response = 1;
  }
}
